Fix Footer Brands Hover Overlaps other Menus

--- a/assets/styles/_animation.scss
+++ b/assets/styles/_animation.scss
@@ -1,8 +1,10 @@
 @keyframes fadeIn {
   0% {
     opacity:0;
+    margin-top: -5px;
   }
   100% {
     opacity:1;
+    margin-top: 0;
   }
 }
