--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -296,10 +296,15 @@ footer ul li ul.nav-drop {
   margin-top: -5px;
 }
 
-footer ul li:hover ul.nav-drop {
+footer ul li ul.nav-drop {
+  display: none;
+}
+
+footer ul li.menu-item-has-children:hover ul.nav-drop {
+  display: block;
   opacity: 1;
-  margin-top: 0px;
-  transition: all 0.25s ease;
+  margin-top: 0;
+  animation: fadeIn ease 0.25s;
 }
 
 footer ul li {
